# waveform-builer

./: .agentic-config.json  .gitignore  AGENTS.md  BRANDING.md  CLAUDE.md  PROJECT_AGENTS.md  README.md  ROADMAP.md  alembic.ini  dev.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 16f80a5c17e9_add_label_column_to_tracks.py  455598dafd10_initial_schema.py  4b88935a2dcc_add_import_columns_and_file_path_index.py  a1c3e5f7d902_add_rating_source_column_to_tracks.py  a7b8c9d0e1f2_add_vibe_columns.py  b57b41372f67_add_kiku_play_count_column_to_tracks.py  b8c9d0e1f2a3_add_album_cover_source.py  c3d4e5f6a7b8_add_oauth_tokens_and_hunt_external_fields.py  c9d0e1f2a3b4_add_planned_set_link_and_comparison_cache.py  d0e1f2a3b4c5_add_set_soft_delete.py  d4e5f6a7b8c9_add_track_affinities_table.py  e5f6a7b8c9d0_add_track_numbers_and_album_metadata.py  f6a7b8c9d0e1_add_source_to_album_metadata.py
frontend/: package-lock.json  package.json
frontend/docs/design-system/: content-conventions.md  related-tracks-card.md  track-card.md  ui-ux-improvements.md
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: analyze_trance_comparison.py
src/djsetbuilder/: __init__.py  cli.py  config.py
src/djsetbuilder/analysis/: analyzer.py  autotag.py  essentia_ext.py  features.py  insights.py  librosa_ext.py  loader.py  similarity.py  waveform.py
src/djsetbuilder/api/: deps.py  main.py  schemas.py
src/djsetbuilder/db/: models.py  scan.py  store.py  sync.py
src/djsetbuilder/export/: rekordbox_xml.py
src/djsetbuilder/parsing/: directory.py
src/djsetbuilder/setbuilder/: camelot.py  constraints.py  planner.py  scoring.py
src/djsetbuilder/visualization/: __init__.py  app.py  callbacks.py  figures.py  (+1 more)
src/kiku/: __init__.py  artists.py  cli.py  config.py  energy.py  vibe.py
tests/: test_artist_bias.py  test_artist_picks.py  test_artists.py  test_autotag.py  test_camelot.py  test_constraints.py  test_cover_art.py  test_directory_parser.py  test_energy.py  test_filename_track_numbers.py  test_m3u8_parser.py  test_matcher.py  test_metadata_correct.py  test_metadata_sources.py  test_musicbrainz_client.py  test_musicbrainz_match.py  test_pdb_parser.py  test_scoring.py  test_set_analysis.py  test_set_compare.py  test_tracklist_parser.py  test_vibe.py
tests/api/: conftest.py  test_album_cover_api.py  test_albums_api.py  test_albums_correction_api.py  test_analysis_api.py  test_artist_picks_api.py  test_cdj_import_api.py  test_compare_api.py  test_config_api.py  test_hunt_api.py  test_import_api.py  test_sets_api.py  test_tinder_api.py  test_tracks_api.py
tests/artwork/: test_deezer.py  test_itunes.py  test_resolver.py
(+217 files in other folders)
