[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-set-builder"
version = "0.1.0"
description = "CLI toolkit for building optimized DJ sets from a Rekordbox library"
requires-python = ">=3.9"
dependencies = [
    "pyrekordbox>=0.3.1",
    "sqlalchemy>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
analysis = [
    "essentia>=2.1b6.dev1110",
    "essentia-tensorflow>=2.1b6.dev1110",
    "librosa>=0.10",
    "soundfile>=0.12",
]
visualizer = [
    "dash>=2.14",
    "plotly>=5.18",
    "plotly-resampler>=0.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
djset = "djsetbuilder.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
