[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kiku"
version = "0.1.0"
description = "Kiku (聴) — learn why your transitions work"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.21",
    "mutagen>=1.45",
    "tomli_w>=1.0",
    "alembic>=1.12",
]

[project.optional-dependencies]
rekordbox = [
    "pyrekordbox>=0.3.1",
]
analysis = [
    "essentia>=2.1b6.dev1110",
    "essentia-tensorflow>=2.1b6.dev1110",
    "librosa>=0.10",
    "soundfile>=0.12",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
visualizer = [
    "dash>=2.14",
    "plotly>=5.18",
]
dev = [
    "kiku[rekordbox]",
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
kiku = "kiku.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
